<resources>
    <string name="app_name">RTC Currency</string>
    <string name="welcome_in_app">Welcome to our app!</string>
    <string name="with_this_app_you_will">With this APP you will be able to track your crypto assets in real time and much more…</string>
    <string name="next">Next</string>
    <string name="drag_left_or_click_the_button">Drag left or click the button…</string>
    <string name="real_time">In real time</string>
    <string name="start">Start</string>
    <string name="track_your_assets_in_real_time">Track your assets in real time…</string>
    <string name="choose_your_exchange">Choose your exchange where you want to analyze the asset and be happy!</string>
    <string name="alerts">Alerts</string>
    <string name="track_your_assets">Track your assets even if you dont look at them…</string>
    <string name="adds_alerts_to_tracking">Add alerts to keep track of assets and receive notifications…</string>
    <string name="select_your_exchange">SELECT AN EXCHANGE</string>
    <string name="search">Search</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="exchanges">Select a Exchange</string>
    <string name="founded_in">Founded in: </string>
    <string name="live_at">Live at: </string>
    <string name="ok">OK</string>
    <string name="title_internet_connection">Internet connection</string>
    <string name="description_internet_connection">Check your internet connection and come back again.</string>
    <string name="none_exchange_list">NONE EXCHANGE IN LIST…</string>
    <string name="best_movimentations_coin">The best movimentations by volume</string>
    <string name="other_coins">Other coins</string>
</resources>
